# rust-text-to-checkstyle

./: .appveyor.yml  .travis.yml  Cargo.toml  changelog.md  readme.md
src/: lib.rs
