[package]
authors = ["Sanemat <o.gata.ken@gmail.com>"]
categories = ["development-tools"]
description = "text to checkstyle."
include = [
    "src/**/*",
    "Cargo.toml",
    "changelog.md",
    "readme.md",
    "license-apache",
    "license-mit",
]
keywords = [
    "checkstyle",
    "text",
]
license = "MIT/Apache-2.0"
name = "text2checkstyle"
repository = "https://github.com/packsaddle/rust-text2checkstyle"
version = "1.0.2"

[badges.appveyor]
project_name = "sanemat/rust-text2checkstyle"
repository = "packsaddle/rust-text2checkstyle"

[badges.travis-ci]
repository = "packsaddle/rust-text2checkstyle"

[dependencies]
checkstyle_formatter = "1.0.0"
